--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ clipboard = ["bevy_egui/manage_clipboard"]
 nightly = []
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", default-features = false, features = ["render", "bevy_render2", "bevy_pbr2"] }
+bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", default-features = false, features = ["bevy_render2", "bevy_pbr2"] }
 bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-pipelined", default-features = false, features = ["open_url"] }
 emath = "0.15"
 pretty-type-name = "1.0"
